--- a/KoreaAlMarket project/src/main/webapp/resources/css/menu.css
+++ b/KoreaAlMarket project/src/main/webapp/resources/css/menu.css
@@ -16,14 +16,6 @@ h1{
 	font-weight: 800;
 }
 
-/* .menu_box{
-	margin:auto;
-	width:330px;
-	margin-top:30px;
-	box-shadow:2px 2px 2px black;
-	border:1px solid blue;
-} */
-
 .menu_box{
 	width: 90%;
     margin: 10px auto;
@@ -31,24 +23,11 @@ h1{
     
 }
 
-/* .type_content{
-	min-height:100px;
-	height:auto;
-	background: #fcc;
-} */
-
-/* .type_content{
-    width: 90%;
-    margin: 10px auto;
-    margin-right: 20px;
-    width:30%;
-} */
-
 .content {
-   border: 1px solid red;
+   /*  border: 1px solid red; */
     float: left;
     width: 30%;
-    higth: 300px;
+    higth: 400px;
     margin: 40px 20px;
     box-sizing: border-box;
     /*  width:380px;
@@ -71,4 +50,8 @@ h1{
 
 .form-select{
 	width : 20%;
+}
+
+.name{
+	font-size: 20px;
 }
